# AI_MCP

./: .env  chainlit.toml  client.py  main_working.py  pyproject.toml  server.py  test.py
